# PlatonicTransformers

./: .gitignore  README.md  meta_main.py  pyproject.toml  readme.md  requirements.txt  requirements_jax.txt  setup.sh
configs/: cifar10_deit.yaml  imagenet_dali.yaml  omol.yaml  qm9_gen.yaml  qm9_jax.yaml  qm9_regr.yaml
datasets/: k_hot_encoding.py  omol.py
mains/: __init__.py  main_cifar10.py  main_imagenet.py  main_omol.py  main_qm9_gen.py  main_qm9_jax.py  main_qm9_regr.py
models/baseline/esen/graph/: compute.py
models/platoformer/: ape.py  block.py  conv.py  groups.py  io.py  linear.py  platoformer.py  rope.py  utils.py
models/platoformer_jax/: block.py  groups.py  linear.py  platoformer.py  rope.py
platonic_transformers/datasets/: dali_rand_augment.py  imagenet_dali.py  omol.py  qm9.py  qm9_jax.py  qm9_rdkit_utils.py
platonic_transformers/diffusion/: __init__.py  edm.py
platonic_transformers/models/platoformer/: _equivariance_test_so3.py  ape.py  block.py  conv.py  gen_utils.py  groups.py  io.py  linear.py  platoformer.py  rope.py
platonic_transformers/models/platoformer_jax/: __init__.py  ape.py  block.py  conv.py  groups.py  io.py  linear.py  platoformer.py  rope.py  utils.py
platonic_transformers/utils/: __init__.py  callbacks.py  config_loader.py  utils.py
scripts/: extract_imagenet_to_folder.py  extract_imagenet_to_folder.sh  run_dali_test.sh  run_imagenet_1gpu.sh  run_imagenet_4gpu.sh
scripts/ivi/: launch_qm9_regr.sh  qm9_regr_slurm.sh
tests/: test_adaln_equivariance.py  test_flash_varlen_attention.py  test_imagenet_dali.py  test_platoformer_jax.py
utils/: __init__.py  callbacks.py  config_loader.py  utils.py
(+13 files in other folders)
