[project]
name = "platonic_transformers"
version = "0.0.1"
description = "Platonic Transformers: A Solid Choice For Equivariance"
authors = [
    { name = "Mohammad Mohaiminul Islam", email = "m.islam@uva.nl" }
]
readme = "README.md"
requires-python = ">=3.10,<3.13"
license = "MIT"
keywords = [
    'artificial intelligence',
    'deep learning',
    '3D molecules',
]

classifiers=[
    'Development Status :: 4 - Beta',
    'Intended Audience :: Developers',
    'Topic :: Scientific/Engineering :: Artificial Intelligence',
    'License :: OSI Approved :: MIT License',
    'Programming Language :: Python :: 3.12',
]

dependencies = [
    # --------- Core ML & DS Stack --------- #
    "torch",
    "torchvision",
    "torchaudio",
    "lightning",
    "torchmetrics",
    "torch_geometric",
    "torch_scatter",
    "timm",

    # --------- Project Specific --------- #
    "fairchem-core",
    "ase-db-backends",
    "mendeleev",
    "scikit-learn",
    "rdkit",

    # --------- Utilities --------- #
    "wandb",
    "ipdb",
    "ml-collections",
    "pyyaml",
]

[project.urls]
Homepage = "https://pypi.org/project/platonic_transformers/"
Repository = "https://github.com/niazoys/PlatonicTransformers"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["platonic_transformers"]

[tool.coverage.report]
exclude_lines = [
    "pragma: nocover",
    "raise NotImplementedError",
    "raise NotImplementedError()",
    "if __name__ == .__main__.:",
]
